@@ -36,11 +36,13 @@ import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiFunctionRes
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.Base64;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 final class PartsAndContentsMapper {
 
@@ -193,15 +195,9 @@ final class PartsAndContentsMapper {
             GeminiExecutableCode executableCode = part.executableCode();
             if (executableCode != null && includeCodeExecutionOutput) {
                 fullText.append("Code executed:\n")
-                        .append("```python")
-                        .append(
-                                executableCode.programmingLanguage() != null
-                                        ? // TODO check below why programming language is null
-                                        // TODO: Is this correct? This would result in: ```pythonpythonCODE```
-                                        executableCode.programmingLanguage().toString()
-                                        : "")
+                        .append("```python\n")
                         .append(executableCode.code())
-                        .append("```\n");
+                        .append("\n```\n");
             }
 
             GeminiCodeExecutionResult codeExecutionResult = part.codeExecutionResult();
@@ -348,14 +344,43 @@ final class PartsAndContentsMapper {
                             return new GeminiContent(
                                     userMessage.contents().stream()
                                             .map(content -> fromContentToGPart(content, mediaResolutionPerPartEnabled))
-                                            .toList(),
+                                            .collect(Collectors.toList()),
                                     GeminiRole.USER.toString());
                         case TOOL_EXECUTION_RESULT:
                             ToolExecutionResultMessage toolResultMessage = (ToolExecutionResultMessage) msg;
 
+                            if (!toolResultMessage.hasSingleText()) {
+                                List<GeminiContent.GeminiPart> toolParts = new ArrayList<>();
+                                Map<String, String> responseMap = new HashMap<>();
+                                for (dev.langchain4j.data.message.Content content : toolResultMessage.contents()) {
+                                    if (content instanceof TextContent textContent) {
+                                        responseMap.put("response", textContent.text());
+                                    } else if (content instanceof ImageContent imageContent) {
+                                        toolParts.add(fromContentToGPart(imageContent, mediaResolutionPerPartEnabled));
+                                    } else {
+                                        throw new UnsupportedFeatureException(
+                                                "Google AI Gemini does not support content type '" + content.type()
+                                                        + "' in tool results.");
+                                    }
+                                }
+                                if (responseMap.isEmpty()) {
+                                    responseMap.put("response", "");
+                                }
+                                toolParts.add(
+                                        0,
+                                        GeminiContent.GeminiPart.builder()
+                                                .functionResponse(new GeminiFunctionResponse(
+                                                        toolResultMessage.id(),
+                                                        toolResultMessage.toolName(),
+                                                        responseMap))
+                                                .build());
+                                return new GeminiContent(toolParts, GeminiRole.USER.toString());
+                            }
+
                             return new GeminiContent(
                                     List.of(GeminiContent.GeminiPart.builder()
                                             .functionResponse(new GeminiFunctionResponse(
+                                                    toolResultMessage.id(),
                                                     toolResultMessage.toolName(),
                                                     Map.of("response", toolResultMessage.text())))
                                             .build()),
@@ -365,7 +390,7 @@ final class PartsAndContentsMapper {
                     }
                 })
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -396,7 +421,9 @@ final class PartsAndContentsMapper {
             boolean shouldAddThoughtSignature = i == 0 && isNotNullOrEmpty(thoughtSignature);
             GeminiContent.GeminiPart geminiPart = GeminiContent.GeminiPart.builder()
                     .functionCall(new GeminiFunctionCall(
-                            toolExecutionRequest.name(), fromJson(toolExecutionRequest.arguments(), Map.class)))
+                            toolExecutionRequest.id(),
+                            toolExecutionRequest.name(),
+                            fromJson(toolExecutionRequest.arguments(), Map.class)))
                     .thoughtSignature(shouldAddThoughtSignature ? thoughtSignature : null)
                     .build();
             geminiParts.add(geminiPart);
